# cgit

./: .gitignore  CMakeLists.txt  README.md  cat-file.c  git-mental-models.md  main.c  project_ideas.md  tests.sh  zlib_decompression.md
docs/: README.md
docs/architecture/: overview.md
docs/decisions/: 001-dispatch-table.md  002-error-handling-strategy.md  003-ownership-model.md  004-object-existence.md  005-parsing-tree.md  006-write-idempotency.md  007-header-parsing-extraction.md  008-buffer-append.md
docs/journal/: 2026-02-10.md  2026-02-11.md  2026-02-14.md  2026-02-16.md  2026-02-17.md  2026-02-19.md  2026-02-20.md  2026-02-21.md
docs/learning/: git-remotes-deep-dive.md
docs/learning/git-internals/: git-init-and-head.md  ls-tree-command.md  write-tree-command.md  zlib-decompression.md
docs/learning/patterns/: bitwise-config-flags.md  cmdmode-dispatch-pattern.md  dispatch-table-pattern.md  struct_stat.md
docs/refactoring/: 2026-02-10.md  2026-02-11.md  2026-02-14.md  2026-02-16.md
src/: main.c  oldmain.c
src/commands/: cat_file.c  commit_tree.c  hash_object.c  init.c  ls_tree.c  write_tree.c
src/core/: compression.c  hash.c  object.c  utils.c
src/include/: commands.h  common.h  core.h
